Refactor SmartRedis build system (#341)
Refactor the SmartRedis build system as planned in the design document:
 . add support for SR_BUILD and SR_LINK Make variables
 . add missing make dependencies
 . eliminate use of scripts for building the SmartRedis libraries
 . eliminate unnecessary deletion of SmartRedis builds, allowing repeat builds to be much faster
 . update examples, test cases, CI/CD to work with new build system
 . update Intel compiler in CI/CD to move away from deprecated compiler that will EOL in the next few months
 . make Python and Fortran optional parts of the build, not built by default

[ committed by @billschereriii ]
[ reviewed by @ashao @MattToast @mellis13 ]

--- a/.github/workflows/run_post_merge_tests.yml
+++ b/.github/workflows/run_post_merge_tests.yml
@@ -170,5 +170,5 @@ jobs:
           export LD_LIBRARY_PATH=$LD_LIBRARY_PATH:$PWD/install/lib &&
           export SR_LOG_FILE=smartredis_examples_log.txt &&
           export SR_LOG_LEVEL=INFO &&
-          make test-examples
+          make test-examples SR_FORTRAN=ON SR_PYTHON=ON
 
