--- a/examples/parallel/fortran/CMakeLists.txt
+++ b/examples/parallel/fortran/CMakeLists.txt
@@ -24,57 +24,67 @@
 # OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
 # OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 
-project(FortranClientExamples)
-
+# Project definition for the SmartRedis-Examples-Parallel-Fortran project
 cmake_minimum_required(VERSION 3.13)
+project(SmartRedis-Examples-Parallel-Fortran)
 
+# Enable language support for the examples
 enable_language(Fortran)
 
-set(CMAKE_VERBOSE_MAKEFILE ON)
-set(CMAKE_BUILD_TYPE Debug)
+# Configure the build
 set(CMAKE_CXX_STANDARD 17)
-set(CMAKE_C_STANDARD 99)
+set(CMAKE_MODULE_PATH "${PROJECT_SOURCE_DIR}/../../..")
+include(smartredis_defs)
 
 # Assume by default that users should link against the install directory in this repository
 if(NOT DEFINED SMARTREDIS_INSTALL_PATH)
   set(SMARTREDIS_INSTALL_PATH "../../../install/")
 endif()
 
-# Specify all pre-processor and library dependencies
+# Locate dependencies
 find_package(MPI REQUIRED)
 IF(NOT MPI_Fortran_FOUND)
 	message(FATAL_ERROR "Could not find Fortran MPI components")
 endif()
-find_library(SMARTREDIS_LIBRARY smartredis PATHS ${SMARTREDIS_INSTALL_PATH}/lib NO_DEFAULT_PATH REQUIRED)
-find_library(SMARTREDIS_FORTRAN_LIBRARY smartredis-fortran PATHS ${SMARTREDIS_INSTALL_PATH}/lib NO_DEFAULT_PATH REQUIRED)
-find_library(HIREDIS hiredis PATHS ${SMARTREDIS_INSTALL_PATH}/lib NO_DEFAULT_PATH REQUIRED)
-find_library(REDISPP redis++ PATHS ${SMARTREDIS_INSTALL_PATH}/lib NO_DEFAULT_PATH REQUIRED)
-set(SMARTREDIS_LIBRARIES
-	${SMARTREDIS_LIBRARY}
-	${SMARTREDIS_FORTRAN_LIBRARY}
-	${HIREDIS}
-	${REDISPP}
+find_library(SR_LIB ${SMARTREDIS_LIB}
+    PATHS ${SMARTREDIS_INSTALL_PATH}/lib NO_DEFAULT_PATH
+    REQUIRED
+    ${SMARTREDIS_LINK_MODE}
 )
+find_library(SR_FTN_LIB ${SMARTREDIS_FORTRAN_LIB}
+	PATHS ${SMARTREDIS_INSTALL_PATH}/lib NO_DEFAULT_PATH
+	REQUIRED
+    ${SMARTREDIS_LINK_MODE}
+)
+set(SMARTREDIS_LIBRARIES
+	${SR_LIB}
+	${SR_FTN_LIB}
+)
+
+# Define include directories for header files
 include_directories(SYSTEM
     /usr/local/include
     ${MPI_INCLUDE_PATH}
     ${SMARTREDIS_INSTALL_PATH}/include
 )
 
-# Define all the tests to be built
+# Define all the examples to be built
 list(APPEND EXECUTABLES
 	 smartredis_dataset
 	 smartredis_mnist
 	 smartredis_put_get_3D
 )
 
+# Build the examples
 foreach(EXECUTABLE ${EXECUTABLES})
-
-	add_executable(${EXECUTABLE}
+	add_executable(${EXECUTABLE}_fortran_parallel
 		${EXECUTABLE}.F90
 		example_utils.F90
 	)
-	target_link_libraries(${EXECUTABLE}
+	set_target_properties(${EXECUTABLE}_fortran_parallel PROPERTIES
+		OUTPUT_NAME ${EXECUTABLE}
+	)
+	target_link_libraries(${EXECUTABLE}_fortran_parallel
 		${SMARTREDIS_LIBRARIES}
 		MPI::MPI_Fortran
 	)
