--- a/tests/fortran/CMakeLists.txt
+++ b/tests/fortran/CMakeLists.txt
@@ -24,46 +24,49 @@
 # OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
 # OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 
-project(FortranClientTester)
-
+# Project definition for the SmartRedis-Tests-Fortran project
 cmake_minimum_required(VERSION 3.13)
+project(SmartRedis-Tests-Fortran)
 
+# Enable language support for the tests
 enable_language(Fortran)
 
-set(CMAKE_VERBOSE_MAKEFILE ON)
-set(CMAKE_BUILD_TYPE DEBUG)
+# Configure the build
 set(CMAKE_CXX_STANDARD 17)
-set(CMAKE_C_STANDARD 99)
+SET(CMAKE_C_STANDARD 99)
+set(CMAKE_MODULE_PATH "${PROJECT_SOURCE_DIR}/../..")
+include(smartredis_defs)
 
-if(COVERAGE)
-	if (CMAKE_Fortran_COMPILER_ID STREQUAL "GNU")
-	    add_compile_options(--coverage)
-	    add_link_options(--coverage)
-	else()
-	    message(WARNING "COVERAGE was specified, but the CMAKE compiler is not GCC")
-	endif()
-endif()
-
-# Assume by default that users should link against the install directory in this repository
+# Assume by default that users should link against the
+# install directory in this repository
 if(NOT DEFINED SMARTREDIS_INSTALL_PATH)
   set(SMARTREDIS_INSTALL_PATH "../../install/")
 endif()
 
-# Specify all pre-processor and library dependencies
-find_library(SMARTREDIS_LIBRARY smartredis PATHS ${SMARTREDIS_INSTALL_PATH}/lib NO_DEFAULT_PATH REQUIRED)
-find_library(SMARTREDIS_FORTRAN_LIBRARY smartredis-fortran PATHS ${SMARTREDIS_INSTALL_PATH}/lib NO_DEFAULT_PATH REQUIRED)
-find_library(HIREDIS hiredis PATHS ${SMARTREDIS_INSTALL_PATH}/lib NO_DEFAULT_PATH REQUIRED)
-find_library(REDISPP redis++ PATHS ${SMARTREDIS_INSTALL_PATH}/lib NO_DEFAULT_PATH REQUIRED)
-set(SMARTREDIS_LIBRARIES
-	${SMARTREDIS_LIBRARY}
-	${SMARTREDIS_FORTRAN_LIBRARY}
-	${HIREDIS}
-	${REDISPP}
+# Locate dependencies
+find_library(SR_LIB ${SMARTREDIS_LIB}
+    PATHS ${SMARTREDIS_INSTALL_PATH}/lib NO_DEFAULT_PATH
+    REQUIRED
+    ${SMARTREDIS_LINK_MODE}
 )
+find_library(SR_FTN_LIB ${SMARTREDIS_FORTRAN_LIB}
+    PATHS ${SMARTREDIS_INSTALL_PATH}/lib NO_DEFAULT_PATH
+    REQUIRED
+    ${SMARTREDIS_LINK_MODE}
+)
+set(SMARTREDIS_LIBRARIES
+	${SR_LIB}
+	${SR_FTN_LIB}
+)
+
+# Define include directories for header files
 include_directories(SYSTEM
     /usr/local/include
     ${SMARTREDIS_INSTALL_PATH}/include
 )
+
+# Stuff the test_utils into a library to enable parallel builds
+add_library(test-utils STATIC test_utils.F90)
 
 # Define all the tests to be built
 list(APPEND EXECUTABLES
@@ -84,13 +87,15 @@ list(APPEND EXECUTABLES
 	 client_test_configoptions
 )
 
+# Build the tests
 foreach(EXECUTABLE ${EXECUTABLES})
-
-	add_executable(${EXECUTABLE}
+	add_executable(${EXECUTABLE}_fortran_test
 		${EXECUTABLE}.F90
-		test_utils.F90
 	)
-	target_link_libraries(${EXECUTABLE}
-		${SMARTREDIS_LIBRARIES}
+    set_target_properties(${EXECUTABLE}_fortran_test PROPERTIES
+        OUTPUT_NAME ${EXECUTABLE}
+    )
+	target_link_libraries(${EXECUTABLE}_fortran_test
+		${SMARTREDIS_LIBRARIES} test-utils
 	)
 endforeach()
