--- a/setup.cfg
+++ b/setup.cfg
@@ -20,6 +20,7 @@ classifiers =
     Programming Language :: Python :: 3.7
     Programming Language :: Python :: 3.8
     Programming Language :: Python :: 3.9
+    Programming Language :: Python :: 3.10
     License :: OSI Approved :: BSD License
     Intended Audience :: Science/Research
     Topic :: Scientific/Engineering
@@ -43,7 +44,7 @@ dev =
     black==20.8b1
     isort==5.6.4
     pylint==2.6.0
-    torch==1.7.1
+    torch>=1.7.1
 
 doc=
     sphinx==3.1.1
