--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,3 +26,29 @@ exclude = '''
 [tool.pytest.ini_options]
 log_cli = true
 log_cli_level = "debug"
+
+[tool.mypy]
+namespace_packages = true
+files = [
+  "src/python/module/smartredis/"
+]
+plugins = []
+ignore_errors=false
+
+# Strict fn defs
+disallow_untyped_calls = true
+disallow_untyped_defs = true
+disallow_incomplete_defs = true
+disallow_untyped_decorators = true
+
+# Safety/Upgrading Mypy
+warn_unused_ignores = true
+# warn_redundant_casts = true # not a per-module setting?
+
+[[tool.mypy.overrides]]
+# Ignore packages that are not used or not typed
+module = [
+  "smartredis.smartredisPy",
+]
+ignore_missing_imports = true
+ignore_errors = true
