--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -127,6 +127,6 @@ jobs:
       - uses: pypa/gh-action-pypi-publish@master
         with:
           user: __token__
-          password: ${{ secrets.PYPI }}
-          #password: ${{ secrets.TEST_PYPI }}
-          #repository_url: https://test.pypi.org/legacy/
+          #password: ${{ secrets.PYPI }}
+          password: ${{ secrets.TEST_PYPI }}
+          repository_url: https://test.pypi.org/legacy/
