Do transpose in the Fortran client

--- a/tests/fortran/CMakeLists.txt
+++ b/tests/fortran/CMakeLists.txt
@@ -126,6 +126,7 @@ list(APPEND EXECUTABLES
 	 client_test_logging
 	 client_test_errors
 	 client_test_configoptions
+	 test_fortran_c_interop
 )
 
 # Build the tests
