--- a/.github/workflows/run_tests.yml
+++ b/.github/workflows/run_tests.yml
@@ -65,8 +65,10 @@ jobs:
         os: [ubuntu-24.04] # cannot test on macOS as docker isn't supported on Mac
         rai_v: [1.2.7] # versions of RedisAI
         py_v: ['3.9.x', '3.10.x', '3.11.x'] # versions of Python
-        compiler: [nvhpc-24-5, intel-2024.0, gcc-11, gcc-12, gcc-13, gcc-14] # intel compiler, and versions of GNU compiler
-        link_type: [shared, static]
+        compiler: [gcc-13, gcc-14] # intel compiler, and versions of GNU compiler
+        # compiler: [nvhpc-24-5, intel-2024.0, gcc-11, gcc-12, gcc-13, gcc-14] # intel compiler, and versions of GNU compiler
+        link_type: [shared]
+        #link_type: [shared, static]
     env:
       COMPILER: ${{ matrix.compiler }} # used when the compiler is gcc/gfortran
       LINK_TYPE: ${{ matrix.link_type }}
