--- a/.github/workflows/run_tests.yml
+++ b/.github/workflows/run_tests.yml
@@ -99,7 +99,7 @@ jobs:
           sudo apt-get -y update &&
           sudo add-apt-repository -y ppa:ubuntu-toolchain-r/test &&
           sudo apt-get -y update &&
-          sudo apt-get -y install -y gcc-${GCC_V} gfortran-${GCC_V} g++-${GCC_V} mpich &&
+          sudo apt-get -y install -y gcc-${GCC_V} gfortran-${GCC_V} g++-${GCC_V} openmpi-bin libopenmpi-dev &&
           sudo update-alternatives --install /usr/bin/gcc gcc /usr/bin/gcc-${GCC_V} 100 \
             --slave /usr/bin/gfortran gfortran /usr/bin/gfortran-${GCC_V} \
             --slave /usr/bin/g++ g++ /usr/bin/g++-${GCC_V} \
